# near-signature-verification

signature/: package.json
signature/contract/: Cargo.toml  deploy.sh
signature/contract/src/: errors.rs  lib.rs
