[package]
name = "signature"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
ed25519-dalek = "1.0.1"
serde = "1.0.145"
thiserror = "1.0.36"
bs58 = "0.4.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
